[package]
name = "evm-sdk"
version = "0.1.2"
edition = "2024"
authors = ["happyboy <superhappyboy1995@gmail.com>"]
description = "Implement most of the commonly used practical transaction-related functions of the EVM network, all EVM traders will need this."
keywords = ["trade", "crypto", "defi", "finance", "evm"]
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/0xhappyboy/evm-sdk"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
chrono = "0.4.42" 
ethers = { version = "2.0", features = ["ws", "openssl"] }
csv = "1.4.0"
evm-client = "0.1.5"
sha3 = "0.10.8"
